tests/js/valid/strings/size.buri
hello = "hello"

@export
helloSize = hello:size()

helloWorld = "hello world"

@export
helloWorldSize = helloWorld:size()