tests/js/invalid/function/mismatched-types-2.buri
func: Func = (a: #hello) => a
hello = func("hello")